# tfpt-theoryv2

./: .gitignore  README.md
E8ChainSolver/: README.md
E8ChainSolver/e8_orbit_engine/: README.md  README_USAGE.md  pyproject.toml  requirements.txt  run_demo.py  setup.py
E8ChainSolver/e8_orbit_engine/data/: nilpotent_orbits.csv
E8ChainSolver/e8_orbit_engine/notebooks/: demo.ipynb
E8ChainSolver/e8_orbit_engine/results/: e8_chain_summary.json  orbit_engine_report.html
E8ChainSolver/e8_orbit_engine/results/chains/: ranking.json
E8ChainSolver/e8_orbit_engine/results/chains/top10/: rank_1.csv  rank_2.csv  rank_3.csv  rank_4.csv  rank_5.csv
E8ChainSolver/e8_orbit_engine/results/data/: e8_chain_clean.csv
E8ChainSolver/e8_orbit_engine/results/tables/: e8_chain.csv
E8ChainSolver/e8_orbit_engine/src/e8_orbit_engine/: __init__.py  chain.py  chain_search.py  cli.py  fit.py  io.py  report.py  verify.py
E8ChainSolver/e8_orbit_engine/tests/: test_chain_strict_d2.py  test_fit.py  test_normalization_fix.py  test_verify.py
Pyrate3/: README.md  activate_env.sh  requirements.txt  run_pyrate.sh  run_test.py
Pyrate3/models/: E8Cascade 2Loop Gravity.yaml  E8Cascade 2Loop Neu.yaml  E8Cascade_2Loop_Neu_v24fix.yaml  E8Cascade_2Loop_Neu_v24fix_PQ.yaml  E8Cascade_TFPT_G8_Enhanced.yaml  README.md  (+5 more)
latex/: README.md  backup-theory-fullv24.tex  progress.md  tfpt-theory-fullv25.tex  tfpt-v25-snippets.tex
old-latex-and-docs/: README.md  README.txt
tfpt-suite/: MASTER_TOE_BACKLOG.md  README.md  TESTS_OVERVIEW.md  TOE_CLOSURE_STATUS.md  progress.md  requirements.txt  run_suite.py
(+624 files in other folders)
