[project]
name = "e8-orbit-engine"
version = "0.1.0"
description = "E8 Orbit Engine - Quadratic damping function from nilpotent orbits"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Stefan Hamann", email = "stefan.hamann@example.com"}
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "mpmath>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.0",
    "rich>=13.0.0",
    "plotly>=5.17.0",
    "kaleido>=0.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
    "ipykernel>=6.25.0",
    "jupyterlab>=4.0.0"
]

[project.scripts]
e8-orbit = "e8_orbit_engine.cli:app"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
